--- a/Week-4/Axios-Todo-Pt-1/index.html
+++ b/Week-4/Axios-Todo-Pt-1/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>Todo Items</h1>
-        <ul id="list"></ul>
+        <div id="list"></div>
         <script src="index.js"></script>
     </body>
 </html>
