--- a/Week-5/Axios-Todo-Pt-2,-3,-4/index.html
+++ b/Week-5/Axios-Todo-Pt-2,-3,-4/index.html
@@ -11,7 +11,7 @@
         <form id="todoForm">
             <input name="Title" placeholder="Title" /> <br>
             <input name="Description" placeholder="Description" /> <br>
-            <button>Submit</button>
+            <input type="submit" name="Submit">
         </form>
         <br>
         <footer>
